# octovia

./: CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  dev.sh
.github/workflows/: deploy-pages.yml  release.yml
docs/: architecture.html
rust/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
rust/examples/: demo.rs  generate_all.rs
rust/src/: ast.rs  label_placement.rs  layout.rs  lib.rs  main.rs  measure.rs  parser.rs  png_export.rs  routing.rs  svg_output.rs  themes.json  wasm.rs
rust/src/ast/: geom.rs  mod.rs  theme.rs  themes.json
rust/src/layout/: mod.rs  star.rs
rust/src/parser/: dsl.rs  json.rs  mod.rs
rust/src/routing/: astar.rs  cyclic.rs  lanes.rs  mod.rs  occupancy.rs  ports.rs
rust/src/svg_output/: defs.rs  elements.rs  mod.rs  trim.rs
rust/tests/: integration.rs
site/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
site/src/: App.svelte  app.css  vite-env.d.ts
site/src/components/: AboutPage.svelte  EditorPanel.svelte  HomePage.svelte  MiniPlayground.svelte  Navbar.svelte  PreviewPanel.svelte
site/src/components/icons/: CheckIcon.svelte  CloseIcon.svelte  CopyIcon.svelte  DownloadIcon.svelte  GithubIcon.svelte  HelpIcon.svelte
site/src/lib/: dsl.ts  examples.ts  themes.ts
site/src/octovia/: octovia.d.ts  octovia.js  octovia_bg.wasm  octovia_bg.wasm.d.ts  package.json
