[package]
name = "octovia"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Text measurement: cosmic-text for pure-Rust font layout + shaping
cosmic-text = "0.12"
unicode-linebreak = "0.1"
unicode-bidi = "0.3"

# Embedded font
rust-embed = "8"

# A* pathfinding on grid
pathfinding = "4"

# SVG serialization
svg = "0.18"

# Serde for potential JSON-format DSL input
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# WASM support
wasm-bindgen = "0.2"

# Raster image export (PNG/JPEG)
resvg = "0.47.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
