[package]
name = "octovia"
version = "0.1.0"
edition = "2024"
description = "A pure-Rust, DOM-free state-diagram rendering engine. Text in. Transit-map SVG out."
license = "MIT OR Apache-2.0"
repository = "https://github.com/jamesjoegraham/octovia"
homepage = "https://octovia.org/"
documentation = "https://docs.rs/octovia"
readme = "README.md"
keywords = ["svg", "diagram", "state-machine", "visualization", "wasm"]
categories = ["visualization", "rendering", "command-line-utilities", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Text measurement: cosmic-text for pure-Rust font layout + shaping
cosmic-text = "0.12"
unicode-linebreak = "0.1"
unicode-bidi = "0.3"

# Embedded font
rust-embed = "8"

# A* pathfinding on grid
pathfinding = "4"

# SVG serialization
svg = "0.18"

# Serde for potential JSON-format DSL input
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# WASM support
wasm-bindgen = "0.2"
